--- a/app/views/index.html
+++ b/app/views/index.html
@@ -7,13 +7,13 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
-    {% include "govuk-prototype-kit/includes/homepage-top.njk" %}
-
     <h1 class="govuk-heading-xl">
-      {{ serviceName }}
+      GOV.UK Prototype
     </h1>
 
-    {% include "govuk-prototype-kit/includes/homepage-bottom.njk" %}
+    <a href="/pages/cookie-banner.html" class="govuk-link">Version 1.0.0</a>
+
+    
   </div>
 </div>
 
