Add links to cookie pages

--- a/app/views/pages/cookie-details.html
+++ b/app/views/pages/cookie-details.html
@@ -11,7 +11,7 @@
   items: [
     {
       text: "Home",
-      href: "#"
+      href: "/pages/cookie-banner.html"
     }
   ]
 }) }}
@@ -85,7 +85,7 @@
             ]
             }) }}
 
-            <p class="govuk-body">You can opt out of Google Analytics cookies on the<a href="#" class="govuk-link"> GOV.UK cookies page</a>or by installing the <a href="#" class="govuk-link">Google Analytics Opt-out Browser Add-on</a>.</p>
+            <p class="govuk-body">You can opt out of Google Analytics cookies on the<a href="/pages/cookies.html" class="govuk-link"> GOV.UK cookies page</a> or by installing the <a href="#" class="govuk-link">Google Analytics Opt-out Browser Add-on</a>.</p>
 
             <p class="govuk-body">You can read Google’s overview of <a href="#" class="govuk-link">data practices within Google Analytics</a>.</p>
 
@@ -542,11 +542,11 @@
 
             <h2 class="govuk-heading-m">Change your settings</h2>
 
-            <p class="govuk-body">You can <a href="" class="govuk-link">change which cookies you’re happy for us to use</a>.</p>
-            
+            <p class="govuk-body">You can <a href="/pages/cookies.html" class="govuk-link">change which cookies you’re happy for us to use</a>.</p>
 
+            <p class="govuk-body-s">Last updated 21 January 2026</p>
 
-
-    </div></div>
+    </div>
+</div>
 
 {% endblock %}
