Add Privacy Page content

--- a/app/views/pages/cookies.html
+++ b/app/views/pages/cookies.html
@@ -12,7 +12,7 @@
   items: [
     {
       text: "Home",
-      href: "#"
+      href: "/pages/cookie-banner.html"
     }
   ]
 }) }}
@@ -28,7 +28,7 @@
 
         <p class="govuk-body">We use cookies to collect and store information about how you use the GOV.UK website and government digital services, such as the pages you visit. 'Government digital services' means any page with service.gov.uk in the URL.</p>
 
-        <p class="govuk-body">This page has a brief explanation of each type of cookie we use. If you want more details, <a href="#"> read our detailed cookie information</a>.</p>
+        <p class="govuk-body">This page has a brief explanation of each type of cookie we use. If you want more details, <a href="/pages/cookie-details.html"> read our detailed cookie information</a>.</p>
 
         <h2 class="govuk-heading-l">Cookie settings</h2>
 
