Update cookie banner content
Short and sweet

--- a/app/views/pages/cookie-banner.html
+++ b/app/views/pages/cookie-banner.html
@@ -11,9 +11,8 @@
       messages: [
         {
           headingText: "Cookies on GOV.UK",
-          html: '<p class="govuk-body">We use some essential cookies to make this service work.</p>
-            <p class="govuk-body">We’d like to set additional cookies to understand how you use GOV.UK, remember your settings and improve government services.</p>
-            <p class="govuk-body">We also use cookies set by other sites to help us deliver content from their services.</p>',
+          html: '<p class="govuk-body">We use cookies to make this website work. We also collect some information about how GOV.UK is used.</p>
+            <p class="govuk-body">We’d like to set additional cookies to help us improve the website, remember your settings and improve government services.</p>',
           actions: [
             {
               text: "Accept additional cookies",
@@ -28,7 +27,7 @@
               value: "no"
             },
             {
-              text: "View cookies",
+              text: "Change your cookie settings",
               href: "/pages/cookies.html"
             }
           ]
