--- a/app/views/pages/cookies.html
+++ b/app/views/pages/cookies.html
@@ -28,32 +28,47 @@
 
         <p class="govuk-body">We use cookies to collect and store information about how you use the GOV.UK website and government digital services, such as the pages you visit. 'Government digital services' means any page with service.gov.uk in the URL.</p>
 
-        <p class="govuk-body">This page has a brief explanation of each type of cookie we use. If you want more details, <a href="/pages/cookie-details.html"> read our detailed cookie information</a>.</p>
+        <p class="govuk-body">This page has a brief explanation of each type of cookie we use.<a href="/pages/cookie-details.html"> Read our detailed cookie information</a> if you want to know more.</p>
 
         <h2 class="govuk-heading-l">Cookie settings</h2>
 
-        <p class="govuk-body">We use 4 types of cookie. You can choose which cookies you're happy for us to use.</p>
+        <p class="govuk-body">We use 4 types of cookies. You can choose which cookies you're happy for us to use.</p>
 
         <form action="/form-handler" method="post" novalidate>
              <h3 class="govuk-heading-m">Cookies that measure website use</h3>
 
-            <p class="govuk-body">We use Google Analytics cookies to measure how you use GOV.UK and government digital services.</p>
+            <p class="govuk-body">We use Google Analytics cookies to measure how you use GOV.UK and government digital services. These cookies collect information about things like:</p>
 
             <ul class="govuk-list govuk-list--bullet">
                 <li>
                     how you got to these sites
                 </li>
                 <li>
-                    the pages you visit and how long you spend on each page
+                    the pages you visit
+                </li>
+                <li>
+                    how long you spend on each page on GOV.UK
                 </li>
                 <li>
                     what you click on while you're visiting these sites
                 </li>
             </ul>
 
-            <p class="govuk-body">We also use LUX Real User Monitoring software cookies from SpeedCurve to measure your web performance experience while visiting GOV.UK.</p>
+            <p class="govuk-body">We collect this information to improve the website.</p>
+            <p class="govuk-body">We use Google Analytics cookies to collect information in two ways:</p>
+            <ul class="govuk-list govuk-list--bullet">
+                <li>
+                    measure general website usage
+                </li>
+                <li>
+                    understand user behaviour in more detail 
+                </li>
+                
+            </ul>
 
-            <p class="govuk-body">LUX software cookies collect and store information about how well pages performed on your device, including whether there were any performance bottlenecks or JavaScript errors.</p>
+            <p class="govuk-body">You’re automatically opted in for gathering general information about how the website is used. You can change your cookie preferences below.</p>
+
+            <p class="govuk-body">We also use LUX Real User Monitoring software cookies from SpeedCurve to for example measure how well the website performed on your device during your visit and if there were any JavaScript errors. </p>
 
             <p class="govuk-body">We do not allow Google or SpeedCurve to use or share this data for their own purposes.</p>
 
@@ -68,20 +83,34 @@
             },
             items: [
                 {
+                value: "aggregate",
+                text: "Use only cookies that measure general website usage",
+                checked:true
+                },
+                {
                 value: "yes",
-                text: "Yes"
+                text: "Use additional cookies that measure user behaviour and web performance",
                 },
                 {
                 value: "no",
-                text: "No",
-                checked: true
+                text: "Do not use any cookies that measure website usage",
                 }
             ]
             }) }}
         
+            <div class="govuk-phase-banner govuk-body govuk-!-margin-bottom-5">
+                <p class="govuk-phase-banner__content">
+                    <strong class="govuk-tag govuk-tag--purple govuk-phase-banner__content__tag">
+                    Checkpoint
+                    </strong>
+                    <span class="govuk-phase-banner__text">
+                    Decide if we use hint text instead
+                    </span>
+                </p>
+            </div>
 
             <h3 class="govuk-heading-m">Cookies that help with our communications and marketing</h3>
-            <p class="govuk-body">We use marketing cookies to help us improve our communications and marketing. These cookies may be set by third party websites and do things like measure how you view YouTube videos that are on GOV.UK.</p>
+            <p class="govuk-body">These cookies may be set by third party websites and do things like measure how you view YouTube videos that are on GOV.UK.</p>
 
             {{ govukRadios({
             name: "cookies[campaigns]",
@@ -129,6 +158,17 @@
                 }
             ]
             }) }}
+
+            <div class="govuk-phase-banner govuk-body govuk-!-margin-bottom-5">
+                <p class="govuk-phase-banner__content">
+                    <strong class="govuk-tag govuk-tag--purple govuk-phase-banner__content__tag">
+                    Checkpoint
+                    </strong>
+                    <span class="govuk-phase-banner__text">
+                    End of checkpoint
+                    </span>
+                </p>
+            </div>
 
             <h3 class="govuk-heading-m">Strictly necessary cookies</h3>
             <p class="govuk-body">These essential cookies do things like remember your progress through a form (for example a licence application).</p>
