--- a/app/views/pages/cookies.html
+++ b/app/views/pages/cookies.html
@@ -50,7 +50,7 @@
                     how long you spend on each page on GOV.UK
                 </li>
                 <li>
-                    what you click on while you're visiting these sites
+                    what you click during your visit
                 </li>
             </ul>
 
