--- a/app/views/pages/cookies.html
+++ b/app/views/pages/cookies.html
@@ -89,11 +89,11 @@
                 },
                 {
                 value: "yes",
-                text: "Use additional cookies that measure user behaviour and web performance",
+                text: "Use additional cookies that measure user behaviour and web performance"
                 },
                 {
                 value: "no",
-                text: "Do not use any cookies that measure website usage",
+                text: "Do not use any cookies that measure website usage"
                 }
             ]
             }) }}
