Add GOV.UK footer links

--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -4,3 +4,9 @@
 // 
 
 // Add extra styles here
+
+// Match the GOV.UK font size, prototyping kit uses a smaller font for the footer
+.govuk-footer {
+    font-size: 1.1875rem;
+    line-height: 1.3157894737;
+}
