Add sidebar related navigation
added sidebar to the cookie details and privacy notice pages

--- a/app/views/pages/cookie-details.html
+++ b/app/views/pages/cookie-details.html
@@ -22,6 +22,11 @@
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
         <h1 class="govuk-heading-xl">Details about cookies on GOV.UK</h1>
+    </div>
+</div>
+
+<div class="govuk-grid-row">
+    <div class="govuk-grid-column-two-thirds">
         <p class="govuk-body">GOV.UK puts small files (known as ‘cookies’) onto your computer to collect information about how you browse the site. Find out more about the cookies we use, what they’re for and when they expire.</p>
 
         <h2 class="govuk-heading-m">Cookies that measure website use</h2>
@@ -580,6 +585,36 @@
             <p class="govuk-body-s">Last updated 21 January 2026</p>
 
     </div>
+
+    <div class="govuk-grid-column-one-third">
+
+      <aside class="govuk-prototype-kit-common-templates-related-items" role="complementary">
+        <h2 class="govuk-heading-s" id="subsection-title">
+          Related content
+        </h2>
+        <nav role="navigation" aria-labelledby="subsection-title">
+          <ul class="govuk-list govuk-!-font-size-16">
+            <li>
+              <a href="#">
+                About GOV.UK
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                Terms and conditions
+              </a>
+            </li>
+            <li>
+              <a href="/pages/privacy-notice.html">
+                Privacy notice
+              </a>
+            </li>
+          </ul>
+        </nav>
+      </aside>
+
+    </div>
+
 </div>
 
 {% endblock %}
