--- a/app/views/pages/privacy-notice.html
+++ b/app/views/pages/privacy-notice.html
@@ -22,7 +22,11 @@
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
         <h1 class="govuk-heading-xl">Privacy notice</h1>
+    </div>
+</div>
 
+<div class="govuk-grid-row">
+    <div class="govuk-grid-column-two-thirds">
         <p class="govuk-body">GOV.UK (or www.gov.uk) is provided by the Government Digital Service (GDS), part of the Department for Science, Innovation & Technology (DSIT).</p>
 
         <p class="govuk-body">DSIT and other government departments, agencies and organisations are joint controllers for pages that start ‘www.gov.uk’.</p>
@@ -375,6 +379,29 @@
         <p class="govuk-body">If these changes affect how your personal data is processed, GDS will take reasonable steps to let you know.</p>
 
         <p class="govuk-body-s">Last updated 1 June 2025</p>
+
+    </div>
+    <div class="govuk-grid-column-one-third">
+
+      <aside class="govuk-prototype-kit-common-templates-related-items" role="complementary">
+        <h2 class="govuk-heading-s" id="subsection-title">
+          Related content
+        </h2>
+        <nav role="navigation" aria-labelledby="subsection-title">
+          <ul class="govuk-list govuk-!-font-size-16">
+            <li>
+              <a href="#">
+                About GOV.UK
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                Terms and conditions
+              </a>
+            </li>
+          </ul>
+        </nav>
+      </aside>
 
     </div>
 </div>
