changes to cookie banner
changes to cookie banner

A cheeky way to change the message on the banner depending on the choice. Show message after the user accepts or rejects the cookies.

and hide the banner when the user chooses hide button.

There's defo a better way to do it, but it should be good enough for now

--- a/app/views/pages/cookie-banner.html
+++ b/app/views/pages/cookie-banner.html
@@ -5,9 +5,9 @@
 {% endblock %}
 
 {% block bodyStart %}
-  <form action="/form-handler" method="post" novalidate>
+  <form action="cookie-banner" method="post" novalidate>
     {{ govukCookieBanner({
-      ariaLabel: "Cookies on [name of service]",
+      ariaLabel: "Cookies on GOV.UK",
       messages: [
         {
           headingText: "Cookies on GOV.UK",
@@ -17,13 +17,13 @@
             {
               text: "Accept additional cookies",
               type: "submit",
-              name: "cookies[additional]",
+              name: "cookies",
               value: "yes"
             },
             {
               text: "Reject additional cookies",
               type: "submit",
-              name: "cookies[additional]",
+              name: "cookies",
               value: "no"
             },
             {
