--- a/app/views/pages/cookies.html
+++ b/app/views/pages/cookies.html
@@ -34,7 +34,7 @@
 
         <p class="govuk-body">We use 4 types of cookies. You can choose which cookies you're happy for us to use.</p>
 
-        <form action="/form-handler" method="post" novalidate>
+        <form action="/settings" method="post" novalidate>
              <h3 class="govuk-heading-m">Cookies that measure website use</h3>
 
             <p class="govuk-body">We use Google Analytics cookies to measure how you use GOV.UK and government digital services. These cookies collect information about things like:</p>
